Reset rendition attributes to default when switching to alternate screen

Summary:
Call setDefaultRendition() before switching to the alternate screen

Quitting vim after using a color scheme which sets the character
background color doesn't clear that attribute in the alternate screen.
This affects other programs which use the alternate screen when run
right after quitting vim, e.g. less.

This issue appears to only happen with certain graphics cards/drivers.

BUG: 328287
FIXED-IN: 18.04

Reviewers: hindenburg, #konsole

Reviewed By: hindenburg, #konsole

Subscribers: #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D11246